--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
+/._git/
+/.serena/
