--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pydantic[email]>=2.0.0",
     "pgvector>=0.3.0",
     "openai>=1.50.0",
+    "google-generativeai>=0.8.0",
     "asyncpg>=0.29.0",
     "httpx>=0.26.0",
     "pydantic-settings>=2.5.0",
